--- a/src/public/sass/components/_bookmarks.scss
+++ b/src/public/sass/components/_bookmarks.scss
@@ -26,6 +26,10 @@
       font-size: 0.8rem;
     }
   }
+
+  @include mobile{
+    overflow-x: hidden;
+  }
 }
 
 .channelsContainer {
