--- a/src/public/sass/components/_stackView.scss
+++ b/src/public/sass/components/_stackView.scss
@@ -52,7 +52,7 @@
     }
   }
   @include mobile {
-    overflow-y: auto;
+    overflow-x: hidden;
   }
 }
 
