--- a/src/public/sass/layout/_mainGrid.scss
+++ b/src/public/sass/layout/_mainGrid.scss
@@ -373,6 +373,7 @@
 
       .file-open {
         background-color: $color-littleLightGrey;
+        text-wrap: nowrap;
       }
 
       &.sideBarRes {
